Fixed margin discrepancies on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ header {
   gap: 1em;
   justify-content: center;
   align-items: center;
-  margin: 0 1em;
+  margin: 0 2em;
 }
 
 .header-section {
@@ -324,7 +324,7 @@ a:focus {
   flex-wrap: wrap;
   gap: 2em;
   justify-content: space-around;
-  margin: 3em 1em;
+  margin: 3em 2em;
 }
 
 .skill {
@@ -569,7 +569,7 @@ a:focus {
   gap: 1em;
   justify-content: center;
   margin-bottom: 2em;
-  margin: 0 1em;
+  margin: 0 2em;
 }
 
 .about-me h2 {
@@ -642,7 +642,7 @@ a:focus {
   flex-direction: column;
   gap: 1em;
   align-items: center;
-  margin: 0 1em;
+  margin: 0 2em;
 }
 
 .contact-copy {
